Simplify directory layout

--- a/jquery/plugins/password-with-meter/test.html
+++ b/jquery/plugins/password-with-meter/test.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Password With Meter Test</title>
-    <link href="css/jquery.password-with-meter.css" rel="stylesheet">
+    <link href="jquery.password-with-meter.css" rel="stylesheet">
     <style>
       input, .password-meter {
           width: 300px;
       }
     </style>
-    <script src="js/zxcvbn-async.js"></script>
+    <script src="zxcvbn-async.js"></script>
   </head>
 
   <body>
@@ -19,7 +19,7 @@
     <hr>
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="js/jquery.password-with-meter.js"></script>
+    <script src="jquery.password-with-meter.js"></script>
     <script>
     $(document).ready(function() {
         $("#password").passwordWithMeter("#password-meter");
