--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
   <title>Sign up</title>
   <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="../jquery/plugins/password-with-meter/jquery.password-with-meter.css" rel="stylesheet">
+  <link href="jquery/plugins/password-with-meter/jquery.password-with-meter.css" rel="stylesheet">
   <style>
     span.error-message {
         color: #b94a48;
@@ -15,7 +15,7 @@
         width: 300px;
     }
   </style>
-  <script src="../jquery/plugins/password-with-meter/zxcvbn-async.js"></script>
+  <script src="jquery/plugins/password-with-meter/zxcvbn-async.js"></script>
 </head>
 <body>
   <div class="container">
@@ -46,7 +46,7 @@
   </div>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="js/jquery.validate.min.js"></script>
-  <script src="../jquery/plugins/password-with-meter/jquery.password-with-meter.js"></script>
+  <script src="jquery/plugins/password-with-meter/jquery.password-with-meter.js"></script>
   <script>
     $(document).ready(function() {
         $("#password").passwordWithMeter("#password-meter");
