--- a/html5/mouse_events.html
+++ b/html5/mouse_events.html
@@ -11,11 +11,15 @@
 
 <script src="jquery.js"></script>
 
-<div id="simple"></div>
+<div id="simple" draggable="true" ondragstart="drag(event)"></div>
 
 <div id="text"></div>
 
 <script>
+function drag(e) {
+    e.dataTransfer.setData("text", e.target.id);
+}
+
 $(document).ready(function() {
 	$("#simple").mouseenter(function() {
 		$("#text").html("mouseenter");
